--- a/app/src/route/login/login.css
+++ b/app/src/route/login/login.css
@@ -112,7 +112,11 @@ label {
  */
 
 .splash-container {
-    background: #fff;
+    /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(255, 255, 255);
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(255, 255, 255, 0.6);
+
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
@@ -153,7 +157,7 @@ label {
     width: 100%;
     min-height: 12%;
     z-index: 2;
-    background: white;
+    /* background: white; */
 
 }
 
@@ -174,7 +178,11 @@ label {
 
 /* This is the class used for the footer */
 .footer {
-    background: #fff;
+    /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(255, 255, 255);
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(255, 255, 255, 0.1);
+    
     bottom: 0;
     width: 100%;
 }
@@ -256,7 +264,8 @@ label {
     margin-left: 5px;
 }
 .rmj-sub {
-	font-size: 24px;
+    font-size: 24px;
+    font-weight: 100;
 	color: white;
 	/*display: block;*/
 	text-align: center;
@@ -268,4 +277,10 @@ label {
 .splash-container{
 	/*background-image: url('./../../images/bg1.jpg');*/
 	/*background-size:cover;*/
+}
+
+a.register.join {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
